# wallpaper-engine

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  basic.py  pyproject.toml  requirement.txt  runner.py
wallpaper_engine/: __main__.py  main.py  main_copy.py
wallpaper_engine/data/: shared.py
wallpaper_engine/libs/: kivy_manager.py  menu.py  osc.py  pygame_manager.py  storage.py  window_manager.py
wallpaper_engine/libs/kv/: wallpaperengine.kv  wallpaperenginemenu.kv
wallpaper_engine/utils/: common.py  config.py  logger.py
wallpaper_engine/wallpapers/: circle_packing.py  clock.py  double_pendulum.py  fibonacci_sphere.py  glsl_loader.py  point_walk.py  polygon_walk.py  pygame_manager.py  rose_pattern.py  rotating_squares.py  sin_wave.py  starfield.py  temp_runner.py  variable_loading.py  wallpaper_base.py
wallpaper_engine/wallpapers/glsl_wallpapers/: Cyber Fuji 2020.glsl  fibonacci_sphere.glsl  gradient.glsl  hexagonal_tiling.glsl  kaleidoscope.glsl
wallpaper_engine/wallpapers/kv/: clock.kv  fibonaccisphere.kv  pointwalk.kv  polygonwalk.kv  rosepattern.kv  rotatingsquares.kv  sinwave.kv  starfield.kv  variableloading.kv
